IMPALA-12035: Impala accepts very big numbers but fails to store them correctly

The statement
 select cast(9999999999999999999999 as BIGINT)
correctly fails with the following message:
 ERROR: UDF ERROR: Decimal expression overflowed

However, if the number is much bigger, no error is produced:
 select cast(999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999
   as BIGINT)

The root cause of the problem is this:
- In the first case, the literal (9999999999999999999999) can fit into a
  DECIMAL and therefore is interpreted as such. This DECIMAL can't fit
  into a BIGINT, and this is checked, so the cast fails.

- In the second case, the literal can't fit in a DECIMAL, so it is
  interpreted as a DOUBLE instead. This is not unreasonable as it fits
  in the range of DOUBLE, although of course there may be loss of
  precision. However, there is no check when casting from DOUBLE to
  BIGINT, and because the value is out of range for BIGINT this invokes
  undefined behaviour (probably leading to an incorrect value).

This change adds checks to casts
 - from floating point types to integer types
 - from double to float

These casts can invoke undefined behaviour in C++ and were not checked
before this change.

If the checks fail, an ERROR is raised.

Testing:
 - Added unit tests in expr-tests.cc for the new checks

Change-Id: Ibd97dee3c793a5caa95b1fe5d22b27b8c0f8275d
Reviewed-on: http://gerrit.cloudera.org:8080/19856
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>